# opentinker

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: bring-your-own-hardware.md  cookbook-notebooks.md  data-preparation.md  distillation.md  ml-training.md  system-diagrams.md
examples/: README.md  __init__.py  basic_finetune.py  cookbook_sl_loop.py  distill_support_router.py  distill_tool_planner.py  evaluate_checkpoint.py  finetune_jsonl.py  multigpu_finetune.py
examples/data/: distillation.jsonl  sft.jsonl
src/opentinker/: __init__.py  _api.py  _checkpoint.py  _distillation.py  _distributed.py  _engine.py  _examples.py  _hardware.py  _image.py  _provider.py  _server.py  adapter.py  data.py  notebook.py
tests/: test_adapter.py  test_api.py  test_checkpoint.py  test_data.py  test_distillation.py  test_distributed.py  test_engine.py  test_examples.py  test_hardware.py
