[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentinker"
version = "0.1.0"
description = "Run Tinker training workflows on Beam and Beta9 GPUs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "OpenTinker contributors" }]
dependencies = [
    "httpx>=0.27,<1",
    "tinker>=0.23,<1",
]

[project.optional-dependencies]
beam = ["beam-client>=0.2.201,<1"]
beta9 = ["beta9>=0.1.258,<1"]
examples = [
    "datasets>=4,<6",
    "tinker-cookbook @ git+https://github.com/thinking-machines-lab/tinker-cookbook.git",
]
notebooks = [
    "tinker-cookbook[tutorials] @ git+https://github.com/thinking-machines-lab/tinker-cookbook.git",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/beam-cloud/opentinker"

[tool.hatch.build.targets.wheel]
packages = ["src/opentinker"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests", "examples"]
reportMissingImports = "none"
